--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jonathan Oliveira Bergamo</title>
-    <link rel="stylesheet" type="text/css" href="Estilo.css">
+    <link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
 <div id = "progressbar"></div>
